--- a/kasa/src/components/banner/banner.css
+++ b/kasa/src/components/banner/banner.css
@@ -1,18 +1,52 @@
 .banner {
-    width: 100%;
-    height: 223px;
-    object-fit: cover;
-    border-radius: 25px;
-    filter: brightness(80%);
+  position: relative;
+}
+
+.banner-img {
+  width: 100%;
+  height: 223px;
+  object-fit: cover;
+  border-radius: 25px;
+  filter: brightness(80%);
 }
 
 .banner-text {
-    padding: 35px 268px;
-    position: absolute;
-    z-index: 1;
-    font-family: 'Montserrat';
-    font-size: 48px;
-    color: white;
-    
-    
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-35%, -50%);
+  text-align: center;
+  z-index: 1;
+  font-family: "Montserrat";
+  font-size: 48px;
+  color: white;
+  margin-top: -4px;
+}
+
+
+
+@media screen and (max-width: 992px) {
+  .banner-img {
+      height: 170px;
+    }
+  
+    .banner-text {
+      font-size: 30px;
+    }
+}
+
+@media screen and (max-width:768px) {
+  .banner-img {
+    height: 110px;
+    border-radius: 10px;
+  }
+
+  .banner-text {
+    font-size: 24px;
+  }
+
+ .banner-large {
+  height: 220px;
+}
+
 }
