--- a/kasa/src/components/card/cards.css
+++ b/kasa/src/components/card/cards.css
@@ -3,26 +3,32 @@
     border-radius: 25px 25px 0px 0px;
     display: flex;
     flex-wrap: wrap;
-    column-gap: 60px;
-    row-gap: 50px;
-    padding: 50px;
+    justify-content: flex-start;
+    gap: clamp(10px,2.7vw,60px);
     margin-top: 40px;
+    padding: 50px;
 }
 
 .card-logement {
     position: relative;
+    width: 100%;
+}
+
+.card {
+    width: 30%;
 }
 
 .card-image {
-    width: 340px;
-    height: 340px;
+    width: 100%;
+    max-width: 340px;
+    height: clamp(152px,20vw,340px);
     object-fit: cover;
     border-radius: 10px;
     filter: brightness(90%)
 }
 
 .card-logement:hover {
-    scale: 1.05;
+    transform: scale(1.05);
     transition: 0.5s;
 }
 
@@ -35,4 +41,38 @@
     font-size: 16px;
     font-weight: 500;
     width: 180px;
+}
+
+@media screen and (max-width:992px) {
+    .cards {
+        padding: 40px;
+        column-gap: clamp(10px, 4.5vw, 60px);
+    }
+    
+    .card {
+        width: 47%;
+    }
+    
+    .card-image {
+        max-width: 500px;
+        height: 250px;
+    }
+}
+
+
+@media screen and (max-width:768px) {
+    .cards {
+        background-color: white;
+        padding: 0px;
+        margin: 20px 0px;
+    }
+
+    .card {
+        width: 100%;
+    }
+    
+    .card-image {
+        max-width: 800px;
+        height: 250px;
+    }
 }
