--- a/kasa/src/components/dropdown/dropdown.css
+++ b/kasa/src/components/dropdown/dropdown.css
@@ -1,12 +1,12 @@
 .dropdown {   
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 25px;
+    margin-top: 30px;
 }
+
 .about {
-    padding-top: 38px;
-    padding-bottom: 100px;
+    padding-top: 10px;
+    padding-bottom: 116px;
+    display: flex;
+    flex-direction: column;
 }
 
 button {    
@@ -15,7 +15,7 @@ button {
     font-family: 'Montserrat';
     font-size: 24px;
     border: none;
-    width: 1020px;
+    width: 100%;
     height: 50px;
     border-radius: 5px;
     cursor: pointer;
@@ -26,29 +26,72 @@ button {
     justify-content: space-between;
 }
 
-
-.dropdown p {
+.dropdown p, ul {
     background-color: #F6F6F6;
     color: #FF6060;
     font-family: 'Montserrat';
     font-size: 20px;
     line-height: 150%;
-    width: 984px;
     margin: 0;
     padding: 20px 18px 20px 18px;
     border-radius: 5px;
+    list-style-type: none;
 }
 
-@keyframes myrotate {
-    0% {
-        transform: rotate(0deg);
+.dropdown ul {
+    max-width: 1000px;
+}
+
+@media screen and (max-width:992px) {
+    .dropdown {
+        margin-top: 20px;
     }
-    100%{
-        transform:rotate(359deg);
+
+    .dropdown p {
+        font-size: 15px;
+    }
+
+    .about {
+        padding-top: 0px;
+    }
+
+    button {
+        font-size: 15px;
+        height: 30px;
+        width: 100%;
+    }
+
+    .logement-dropdown {
+        width: 100% !important;
     }
 }
 
-.rotate{
-    animation: myrotate 1.5 ;
-    scale: 1.1;
+@media screen and (max-width:768px) {
+    .dropdown {
+        margin-top: 20px;
+    }
+
+    .dropdown p {
+        font-size: 12px;
+    }
+    
+    .about {
+        padding-top: 0px;
+    }
+
+    button {
+        font-size: 12px;
+        height: 30px;
+        width: 100%;
+    }
+
+    .logement-dropdown-section {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .logement-dropdown {
+         width: 100%!important;
+    }
 }
